# yoloflow

./: .coverage  .gitignore  README.md  create_sample_projects.py  pyproject.toml  test_list_item_style.py  test_project_manager_ui.py  test_title_bar.py  test_ui_functionality.py
.github/: copilot-instructions.md
sample_projects/TEST/: yoloflow.toml
sample_projects/project_1_detection/: yoloflow.toml
sample_projects/project_2_classification/: yoloflow.toml
sample_projects/project_3_segmentation/: yoloflow.toml
sample_projects/test2/: yoloflow.toml
src/yoloflow/: __init__.py  api.py  cli.py
src/yoloflow/cli/: __init__.py  main.py
src/yoloflow/helper/: __init__.py  create_project_helper.py
src/yoloflow/model/: __init__.py  dataset_info.py  dataset_manager.py  dataset_type.py  model_info.py  model_selector.py  project.py  project_config.py  task_info.py  task_provider.py  task_type.py
src/yoloflow/model/backend/: __init__.py  backend_base.py  backend_info.py
src/yoloflow/model/enums/: __init__.py  backend_unavailable_reason.py  dataset_target.py  plan_status.py
src/yoloflow/model/project/: __init__.py  dataset_config.py  dataset_info.py  dataset_manager.py  plan_context.py  plan_dataset_config.py  plan_info.py  project.py  project_config.py  project_dataset_manager.py  project_model_info.py  project_model_manager.py  project_plan_manager.py  training_parameters.py  training_results.py  validation_parameters.py
src/yoloflow/model/start_up/: __init__.py  model_info.py  model_selector.py  task_info.py  task_provider.py
src/yoloflow/service/: __init__.py  backend_manager.py  project.py  project_config.py  project_manager.py
src/yoloflow/ui/: __init__.py  create_project_wizard.py  dataset_config_dialog.py  message_box.py  model_download_dialog.py  project_delete_window.py  project_manager_window.py  splash_screen.py  workspace_window.py
src/yoloflow/ui/components/: __init__.py  project_item.py  status_bar.py  title_bar.py  workflow_bar.py  workspace_title_bar.py
src/yoloflow/ui/pages/: __init__.py  dataset_page.py  evaluation_page.py  export_page.py  home_page.py  job_page.py  log_page.py  model_page.py  training_page.py
test/: test_backend_info.py  test_backend_manager.py  test_dataset_manager.py  test_delete_functionality.py  test_hover_effects.py  test_model_download_dialog.py  test_model_selector.py  test_project_delete_window.py  test_project_integration.py  test_project_management.py  test_project_model_manager.py  test_splash_screen.py  test_task_provider.py  test_title_bar.py
